Files: Update project file

--- a/notebooks/2_Feature_extraction.ipynb
+++ b/notebooks/2_Feature_extraction.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "id": "fe9096b0",
    "metadata": {},
    "outputs": [],
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "id": "8a09f518",
    "metadata": {},
    "outputs": [
@@ -82,49 +82,49 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>class</th>\n",
-       "      <th>Message</th>\n",
+       "      <th>clean_message</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>ham</td>\n",
-       "      <td>Go until jurong point, crazy.. Available only ...</td>\n",
+       "      <td>go j ong point crazy available bugis n great w...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>ham</td>\n",
-       "      <td>Ok lar... Joking wif u oni...</td>\n",
+       "      <td>ok lar joking wif oni</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>spam</td>\n",
-       "      <td>Free entry in 2 a wkly comp to win FA Cup fina...</td>\n",
+       "      <td>free entry wkly comp win fa cup final ticket 2...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>ham</td>\n",
-       "      <td>U dun say so early hor... U c already then say...</td>\n",
+       "      <td>u dun say early hor u already say</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>ham</td>\n",
-       "      <td>Nah I don't think he goes to usf, he lives aro...</td>\n",
+       "      <td>nah think go usf life around though</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  class                                            Message\n",
-       "0   ham  Go until jurong point, crazy.. Available only ...\n",
-       "1   ham                      Ok lar... Joking wif u oni...\n",
-       "2  spam  Free entry in 2 a wkly comp to win FA Cup fina...\n",
-       "3   ham  U dun say so early hor... U c already then say...\n",
-       "4   ham  Nah I don't think he goes to usf, he lives aro..."
+       "  class                                      clean_message\n",
+       "0   ham  go j ong point crazy available bugis n great w...\n",
+       "1   ham                              ok lar joking wif oni\n",
+       "2  spam  free entry wkly comp win fa cup final ticket 2...\n",
+       "3   ham                  u dun say early hor u already say\n",
+       "4   ham                nah think go usf life around though"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,19 +137,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "id": "7042797e-6a7a-49c6-a347-089744442db6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "class      0\n",
-       "Message    0\n",
+       "class            0\n",
+       "clean_message    6\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "id": "dfd73e1f-b402-42b4-a241-f9565a75b777",
    "metadata": {},
    "outputs": [],
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "id": "16dd80b6",
    "metadata": {},
    "outputs": [
@@ -188,33 +188,43 @@
        "array(['ham', 'ham', 'spam', ..., 'ham', 'ham', 'ham'], dtype=object)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Determine data and target\n",
-    "X = df['Message']\n",
+    "X = df['clean_message']\n",
     "y = df['class'].values\n",
     "y"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 14,
    "id": "49c26668",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Splitting the dataset into the Training, validation and Test sets\n",
     "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.2, stratify = y)"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.2, stratify = y)\n",
+    "\n",
+    "# split data into train and test\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X,\n",
+    "    y,\n",
+    "    test_size=0.15,\n",
+    "    random_state=0,\n",
+    "    shuffle=True,\n",
+    "    stratify=y,\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 15,
    "id": "a64fae8d",
    "metadata": {},
    "outputs": [],
@@ -228,8 +238,28 @@
    ]
   },
   {
+   "cell_type": "raw",
+   "id": "8e43e04a",
+   "metadata": {},
+   "source": [
+    "# I will use CountVectorizer method to extract the text features.\n",
+    "\n",
+    "\n",
+    "# Transform text data \n",
+    "vectorizer = CountVectorizer(lowercase=False)\n",
+    "\n",
+    "vectorizer.fit(X_train)\n",
+    "\n",
+    "#transform train data \n",
+    "X_train_trans = vectorizer.transform(X_train)\n",
+    "\n",
+    "#transform test data\n",
+    "X_text_trans = vectorizer.transform(X_test)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 16,
    "id": "9a0ed4d2",
    "metadata": {},
    "outputs": [
@@ -237,10 +267,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Shape of X_train: (4135,)\n",
-      "Shape of X_test: (1034,)\n",
-      "Shape of train_vectors: (4135, 2000)\n",
-      "Shape of test_vectors: (1034, 2000)\n"
+      "Shape of X_train: (4388,)\n",
+      "Shape of X_test: (775,)\n",
+      "Shape of train_vectors: (4388, 1691)\n",
+      "Shape of test_vectors: (775, 1691)\n"
      ]
     }
    ],
@@ -273,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 17,
    "id": "0ce417fd",
    "metadata": {},
    "outputs": [],
@@ -290,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 18,
    "id": "7cdc7558",
    "metadata": {},
    "outputs": [],
@@ -307,7 +337,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "afa5fc08",
+   "id": "53265f70",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -329,7 +359,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
